tests/compile-fail/null_pointer_deref_zst.stderr
error: Undefined Behavior: dereferencing pointer failed: null pointer is not a valid pointer
 --> $DIR/null_pointer_deref_zst.rs:6:26
  |
6 |     let x: () = unsafe { *std::ptr::null() }; //~ ERROR dereferencing pointer failed: null pointer is not a valid pointer
  |                          ^^^^^^^^^^^^^^^^^ dereferencing pointer failed: null pointer is not a valid pointer
  |
  = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
  = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
          
  = note: inside `main` at $DIR/null_pointer_deref_zst.rs:6:26

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

